Small changes and cleanup

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,16 +8,15 @@
       <thead>
          <tr>
             <th>Day</th>
-            <th>Night</th>
+@*            <th>Night</th>
             <th>Morning</th>
             <th>Afternoon</th>
-            <th>Evening</th>
+            <th>Evening</th>*@
             <th>Min/max temp °C</th>
             <th>Weather</th>
          </tr>
       </thead>
       <tbody>
       </tbody>
-   </table>
    </table>
 </div>
